# plugins-lab

./: README.md
model-decision-tree/: pyproject.toml
model-decision-tree/notebooks/: model-decision-tree.ipynb
model-decision-tree/src/modulus/models/model_decision_tree/: __init__.py  model.py
model-linear-regression/: pyproject.toml
model-linear-regression/notebooks/: model-linear-regression.ipynb
model-linear-regression/src/modulus/models/model_linear_regression/: __init__.py  model.py
modulus-library/: README.md  pyproject.toml
modulus-service/: pyproject.toml
